feat: enable calendar for partner team

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           },
           PARTNER: {
             TITLE: 'Partner',
-            CALENDAR_ID: '',
+            CALENDAR_ID: 'c_7fab192c1b1355b930480cb7d71edde5ed7513e27f63c154ff72b5fdf5ed7e44@group.calendar.google.com',
             COUNTRY: 'CZ',
             WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
             WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
