feat: add one-b2b-payment

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             COUNTRY: 'CZ',
             WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
             WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
+          },
+          ONE_B2B_PAYMENT: {
+            TITLE: 'One B2B Payment',
+            CALENDAR_ID: '6nu9qbu10f666971hn2tl82lsuk4atb4@import.calendar.google.com',
+            COUNTRY: 'CZ',
+            WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
+            WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
           }
         }
       }
