feat: add road to product team

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             COUNTRY: 'CZ',
             WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
             WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
+          },
+          ROAD_TO_PRODUCT: {
+            TITLE: 'Road to product',
+            CALENDAR_ID: '4rk0t8mshmvgfse0doheju83c2cn705i@import.calendar.google.com',
+            COUNTRY: 'CZ',
+            WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
+            WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
           }
         }
       }
