docs: make it clear how to fill team title

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       window.CONFIG = {
         TEAMS: {
           ONE_ACCOUNT: {
-            TITLE: 'One Account',
+            TITLE: 'One Account', // This has to correspond with "Select your team" value from "On-call report"
             CALENDAR_ID: '0hl5v5fdgv5vrqhntgj12qfag1hrr492@import.calendar.google.com',
             COUNTRY: 'CZ',
             WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
             WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
           },
           PARTNER: {
-            TITLE: 'Partner',
+            TITLE: 'Partner', // This has to correspond with "Select your team" value from "On-call report"
             CALENDAR_ID: 'chmdv3qb7ld152gd206jt8vvte53cbl6@import.calendar.google.com',
             COUNTRY: 'CZ',
             WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
             WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
           },
           ONE_B2B_PAYMENT: {
-            TITLE: 'One B2B Payment',
+            TITLE: 'One B2B Payment', // This has to correspond with "Select your team" value from "On-call report"
             CALENDAR_ID: '6nu9qbu10f666971hn2tl82lsuk4atb4@import.calendar.google.com',
             COUNTRY: 'CZ',
             WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
