--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             WORKING_HOURS_END: 16, // This has to correspond with the working hours set in opsgenie
           },
           ROAD_TO_PRODUCT: {
-            TITLE: 'Road to product',
+            TITLE: 'Road to Product', // This has to correspond with "Select your team" value from "On-call report"
             CALENDAR_ID: '4rk0t8mshmvgfse0doheju83c2cn705i@import.calendar.google.com',
             COUNTRY: 'CZ',
             WORKING_HOURS_START: 8, // This has to correspond with the working hours set in opsgenie
